--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Developed by Luis (Luuuuuis @realluuuuuis)
-  ~ Last modified 06.10.21, 18:57
+  ~ Developed by Luis (@realluuuuuis)
+  ~ Last modified 16.10.21, 20:48
   ~ Copyright (c) 2021
   -->
 
