--- a/whaley-master/src/main/resources/application.properties
+++ b/whaley-master/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 #
-# Developed by Luis (Luuuuuis @realluuuuuis)
-# Last modified 06.10.21, 18:57
+# Developed by Luis (@realluuuuuis)
+# Last modified 16.10.21, 20:53
 # Copyright (c) 2021
 #
-
 server.port=80
 # Enable response compression
 server.compression.enabled=true
@@ -11,3 +10,5 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
 # Compress the response only if the response size is at least 1KB
 server.compression.min-response-size=1024
+whaley.http.auth-token-header-name=API-KEY
+whaley.http.auth-token=ASASDOIHOASD
